Spacing fixing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3847,7 +3847,7 @@ input[type=button].btn-block {
   padding: 0.5rem 1rem;
   font-weight: 500;
   transition: .3s;
-  font-size: 18px;
+  font-size: 1rem;
 }
 
 .nav-link:hover, .nav-link:focus {
